--- a/interactive_engine/benchmark/config/interactive-benchmark.properties
+++ b/interactive_engine/benchmark/config/interactive-benchmark.properties
@@ -35,13 +35,15 @@ benchmark.result.log.path=./interactive-benchmark.log
 # The configuration for the benchmarking queries.
 # the directory of query templates
 query.dir = ./queries/cypher_queries/job/gie/
-# the directory of query parameters
+# the directory of query parameters. If the queries do not have parameters, leave it empty.
 query.parameters.dir = ./data/substitution_parameters/
 # query suffix. By default, if the client is gremlin, the query suffix is .gremlin, and if the client opt is cypher, the query suffix is cypher.
 query.suffix=cypher
-# the directory of query results
+# the directory of query results which is optional. if provided, the benchmarking results will be compared with the expected results.
 query.expected.path = ./data/expected_results/expected.json
-# specify which kind of queries are sent, if query.all.enable is true, the following settings to specify specific queries are ignored.
+# specify which kind of queries are sent. 
+# if query.all.enable is true, the benchmark will send all the queries in the query.dir, 
+# and the following settings to specify specific queries are ignored.
 query.all.enable=true
 
 # the following configurations are used to specify which kind of queries are sent:
