--- a/interactive_engine/benchmark/config/interactive-benchmark.properties
+++ b/interactive_engine/benchmark/config/interactive-benchmark.properties
@@ -25,8 +25,6 @@ benchmark.thread.count=1
 benchmark.warmup.every.query=0
 # the number of queries sending by each thread
 benchmark.operation.count.every.query=35
-# the timeout setting for each query (in milliseconds)
-benchmark.timeout=60000
 # enable print info
 benchmark.print.query.name=true
 benchmark.print.query.result=true
@@ -37,10 +35,12 @@ benchmark.result.log.path=./interactive-benchmark.log
 query.dir = ./queries/cypher_queries/job/gie/
 # the directory of query parameters. If the queries do not have parameters, leave it empty.
 query.parameters.dir = ./data/substitution_parameters/
-# query suffix. By default, if the client is gremlin, the query suffix is .gremlin, and if the client opt is cypher, the query suffix is cypher.
-query.suffix=cypher
+# query file suffix, e.g., cypher (ldbc_query.cypher), gremlin (ldbc_query.gremlin), txt (ldbc_query.txt), etc. 
+query.file.suffix=cypher
 # the directory of query results which is optional. if provided, the benchmarking results will be compared with the expected results.
-query.expected.path = ./data/expected_results/expected.json
+query.expected.path = ./data/expected_results/job_expected.json
+# the timeout setting for each query (in milliseconds)
+query.timeout=60000
 # specify which kind of queries are sent. 
 # if query.all.enable is true, the benchmark will send all the queries in the query.dir, 
 # and the following settings to specify specific queries are ignored.
