use error code from proto
Committed-by: xiaolei.zl from Dev container

Committed-by: xiaolei.zl from Dev container

--- a/flex/storages/rt_mutable_graph/CMakeLists.txt
+++ b/flex/storages/rt_mutable_graph/CMakeLists.txt
@@ -9,7 +9,7 @@ if (NOT BUILD_ODPS_FRAGMENT_LOADER)
         list(REMOVE_ITEM RT_MUTABLE_GRAPH_SRC_FILES "${CMAKE_CURRENT_SOURCE_DIR}/loader/odps_fragment_loader.cc")
 endif()
 add_library(flex_rt_mutable_graph SHARED ${RT_MUTABLE_GRAPH_SRC_FILES})
-target_link_libraries(flex_rt_mutable_graph ${LIBGRAPELITE_LIBRARIES} ${YAML_CPP_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(flex_rt_mutable_graph flex_utils ${LIBGRAPELITE_LIBRARIES} ${YAML_CPP_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 if (ARROW_SHARED_LIB)
         target_link_libraries(flex_rt_mutable_graph ${ARROW_SHARED_LIB})
 else()
