--- a/.github/workflows/gae.yml
+++ b/.github/workflows/gae.yml
@@ -5,13 +5,13 @@ on:
   # but only for the main branch
   workflow_dispatch:
   push:
-    branches:
-      - main
-    paths:
-      - 'analytical_engine/**'
-      - '.github/workflows/gae.yml'
-      - 'coordinator/gscoordinator/template/CMakeLists.template' # to verify whether java app can be successfully built when CMakeLists.template changes.
-      - '!analytical_engine/**.md'
+    # branches:
+    #   - main
+    # paths:
+    #   - 'analytical_engine/**'
+    #   - '.github/workflows/gae.yml'
+    #   - 'coordinator/gscoordinator/template/CMakeLists.template' # to verify whether java app can be successfully built when CMakeLists.template changes.
+    #   - '!analytical_engine/**.md'
   pull_request:
     branches:
       - main
