--- a/flex/engines/graph_db/runtime/CMakeLists.txt
+++ b/flex/engines/graph_db/runtime/CMakeLists.txt
@@ -9,7 +9,7 @@ target_link_libraries(runtime_adhoc runtime_common)
 install_flex_target(runtime_adhoc)
 
 
-file(GLOB_RECURSE CODEGEN_SOURCES "codegen/*.cc" "common/types.cc")
+file(GLOB_RECURSE CODEGEN_SOURCES "codegen/*.cc" "common/types.cc" "common/utils.cc")
 add_library(runtime_codegen SHARED ${CODEGEN_SOURCES})
 target_link_libraries(runtime_codegen hqps_plan_proto flex_utils flex_rt_mutable_graph)
 
