--- a/.github/workflows/gae.yml
+++ b/.github/workflows/gae.yml
@@ -39,6 +39,24 @@ jobs:
         # When ready, change to use this:
         # gsctl install-deps dev-analytical
         gsctl install-deps dev
+        bash ../../.github/free-disk-space.sh || true
+
+    - name: Cache Environment with installed dependencies
+      id: cache-deps
+      uses: actions/cache@v3
+      env:
+        cache-name: cache-deps
+      with:
+        key: ${{ runner.os }}-build-${{ env.cache-name }}
+        path: |
+         - ~/.graphscope_env
+         - ~/.cache
+         - ~/.local
+         - ~/.rustup
+         - ~/.cargo
+         - ~/.cmake
+         - /opt/graphscope
+         - /opt/vineyard
 
 
     - name: Build
@@ -49,7 +67,7 @@ jobs:
         cd analytical_engine
         mkdir build
         cd build
-        cmake ..
+        cmake -DBUILD_TESTS=OFF ..
         make
 
     # - name: Run Cpp Test
